@@ -7,7 +7,7 @@ configure:	 Makefile.in configure.ac
 
 clean:
 	@if [ -f Makefile ]; then make clean; fi || true
-	@rm -rvf Makefile configure src/config.*
+	@rm -rvf Makefile configure src/config.* src/Makefile.*
 	@rm -rvf src/*.pri src/*.desktop *.spec
 	@rm -rvf src/.ui* src/.obj* src/.moc*
 	@rm -rvf *.cache *.log *.status
